--- a/vendas/src/main/res/layout-large/configuracao_geral.xml
+++ b/vendas/src/main/res/layout-large/configuracao_geral.xml
@@ -29,18 +29,19 @@
         android:id="@+id/txtEstoque"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_below="@+id/txtCaminhoFtp"
-        android:text="Codigo da Empresa"
+        android:layout_alignParentLeft="true"
+        android:text="CNPJ da Empresa"
         android:textSize="25sp" />
 
     <EditText
         android:id="@+id/txtCodigoEmpresa"
-        android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignRight="@+id/txtEstoque"
+        android:layout_width="441dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/txtEstoque"
+        android:layout_alignRight="@+id/txtEstoque"
+        android:layout_alignParentLeft="true"
+        android:layout_marginRight="-239dp"
         android:ems="10"
         android:inputType="number"
         android:textSize="25sp" />
@@ -49,9 +50,9 @@
         android:id="@+id/txtLoHora"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_below="@+id/txtCodigoEmpresa"
-        android:text="Caminho Recepção Manual"
+        android:layout_alignParentLeft="true"
+        android:text="Email da empresa"
         android:textSize="25sp" />
 
     <EditText
