--- a/vendas/src/main/res/layout/consulta_positivacao.xml
+++ b/vendas/src/main/res/layout/consulta_positivacao.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
@@ -81,5 +83,21 @@
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
     </LinearLayout>
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/btnConsultaPrincipal"
+            android:layout_width="144dp"
+            android:layout_height="39dp"
+            android:text="Voltar"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="240dp" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </LinearLayout>
