--- a/vendas/src/main/res/layout/configuracao_geral.xml
+++ b/vendas/src/main/res/layout/configuracao_geral.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
         android:id="@+id/lblEmpresa"
@@ -83,5 +85,20 @@
             android:layout_alignTop="@+id/txtPortaFtp"
             android:layout_toRightOf="@+id/txtLoHora"
             android:text="Salvar" />
-    
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/btnConfiguracaoPrincipal"
+            android:layout_width="384dp"
+            android:layout_height="55dp"
+            android:layout_marginTop="276dp"
+            android:text="Voltar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </RelativeLayout>
