--- a/vendas/src/main/res/layout/list_clientes.xml
+++ b/vendas/src/main/res/layout/list_clientes.xml
@@ -5,9 +5,38 @@
     android:orientation="vertical"
     android:padding="16dp">
 
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/snackbar_include"
+        android:orientation="vertical" >
+
     <TextView
-        android:id="@+id/item_text"
+        android:id="@+id/txtRVCodCliente"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:text="TextView" />
+    <TextView
+        android:id="@+id/txtRVPedido"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:text="Pedido" />
+    <TextView
+        android:id="@+id/lblRVEmpresa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/txtRVPedido"
+        android:layout_toRightOf="@+id/txtRVCodCliente"
+        android:text="TextView" />
+    </RelativeLayout>
+    <TextView
+        android:id="@+id/txtRVNomeCliente"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp" />
+
 </LinearLayout>
