--- a/vendas/src/main/res/menu/menu_cliente.xml
+++ b/vendas/src/main/res/menu/menu_cliente.xml
@@ -26,5 +26,10 @@
         android:title="Mostrar Todos"
         android:orderInCategory="100"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/menu_principal"
+        android:title="Voltar"
+        android:orderInCategory="100"
+        app:showAsAction="never"/>
 
 </menu>
