--- a/vendas/src/main/res/menu/menu_cliente.xml
+++ b/vendas/src/main/res/menu/menu_cliente.xml
@@ -30,6 +30,6 @@
         android:id="@+id/menu_principal"
         android:title="Voltar"
         android:orderInCategory="100"
-        app:showAsAction="never"/>
+        app:showAsAction="always"/>
 
 </menu>
