--- a/vendas/src/main/res/menu/menu_produto.xml
+++ b/vendas/src/main/res/menu/menu_produto.xml
@@ -15,5 +15,5 @@
         android:id="@+id/menu_voltar_produto"
         android:title="Voltar"
         android:orderInCategory="100"
-        app:showAsAction="never"/>
+        app:showAsAction="always"/>
 </menu>
