--- a/vendas/src/main/res/layout/consulta_vendascliente.xml
+++ b/vendas/src/main/res/layout/consulta_vendascliente.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="16dp">
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -39,3 +45,4 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </RelativeLayout>
+</LinearLayout>
