--- a/vendas/src/main/res/menu/popup_consulta_cliente.xml
+++ b/vendas/src/main/res/menu/popup_consulta_cliente.xml
@@ -6,4 +6,7 @@
     <item
         android:id="@+id/action_consulta_cliente_editar"
         android:title="Editar" />
+    <item
+        android:id="@+id/action_consulta_cliente_excluir"
+        android:title="Excluir" />
 </menu>
