--- a/vendas/src/main/res/layout/fragment_principal.xml
+++ b/vendas/src/main/res/layout/fragment_principal.xml
@@ -4,11 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@drawable/ic_palmvenda">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Principal Fragment"
-        android:textSize="20sp" />
 </LinearLayout>
