--- a/vendas/src/main/res/layout/fragment_principal.xml
+++ b/vendas/src/main/res/layout/fragment_principal.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:padding="16dp"
-    android:background="@drawable/ic_palmvenda">
+    android:padding="16dp">
 
 </LinearLayout>
