--- a/vendas/src/main/res/menu/menu_cliente.xml
+++ b/vendas/src/main/res/menu/menu_cliente.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/menu_rota"
+        android:title="Rotas"
+        android:orderInCategory="100"
+        app:showAsAction="never"/>
+    <item
         android:id="@+id/menu_ordenar_nome"
         android:title="Ordenar Nome"
         android:orderInCategory="100"
