--- a/vendas/src/main/res/layout/principal_navigationview.xml
+++ b/vendas/src/main/res/layout/principal_navigationview.xml
@@ -21,7 +21,8 @@
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbar">
+        android:layout_below="@id/toolbar"
+        android:layout_marginTop="?attr/actionBarSize">
 
     </FrameLayout>
 
