--- a/vendas/src/main/res/menu/menu_drawer.xml
+++ b/vendas/src/main/res/menu/menu_drawer.xml
@@ -9,4 +9,7 @@
     <item
         android:id="@+id/nav_produtos"
         android:title="Produtos" />
+    <item
+        android:id="@+id/nav_utilitarios"
+        android:title="Utilitário" />
 </menu>
