--- a/vendas/src/main/res/menu/popup_utilitario_pendente.xml
+++ b/vendas/src/main/res/menu/popup_utilitario_pendente.xml
@@ -2,5 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_abre_pedido"
-        android:title="Abre Pedido" />
+        android:title="Abrir Pedido" />
+    <item
+        android:id="@+id/action_fecha_pedido"
+        android:title="Fechar Pedido" />
 </menu>
