--- a/vendas/src/main/res/layout/dialog_cliente_rota.xml
+++ b/vendas/src/main/res/layout/dialog_cliente_rota.xml
@@ -8,5 +8,6 @@
     <Spinner
         android:id="@+id/cbxRota"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:spinnerMode="dropdown" />
 </LinearLayout>
