--- a/vendas/src/main/res/layout/list_clientes.xml
+++ b/vendas/src/main/res/layout/list_clientes.xml
@@ -38,5 +38,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp" />
+    <TextView
+        android:id="@+id/txtRVSeqVisita"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="13sp"
+        android:textStyle="italic"/>
 
 </LinearLayout>
