--- a/vendas/src/main/res/menu/popup_historico.xml
+++ b/vendas/src/main/res/menu/popup_historico.xml
@@ -15,4 +15,7 @@
     <item
         android:id="@+id/action_historico_pdf"
         android:title="Gerar PDF" />
+    <item
+        android:id="@+id/action_historico_enviar_pedido"
+        android:title="Enviar Pedido" />
 </menu>
